--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Fredericka+the+Great&family=Poiret+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: #FFFFFF;
+    font-family: "Poiret One", sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h1 {
+    font-family: "Fredericka the Great", cursive;
 }
+
+.shared-section {
+    background-image: radial-gradient(circle at center center, rgba(242, 204, 143, 0.1) 5%, rgba(255, 255, 255, 0) 9%);
+    background-size: 45px 45px;
+}
+
+::-webkit-scrollbar {
+    height: 0;
+    width: 0;
+}
+
